# WORkFORCE_AGENTIC_ALL

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY_README.md  FULFILLTWIN_MERGE_NOTES.md  MERGE_NOTES.md  MERGE_VALIDATION.md  README.md  app.py  crew.py  crew_runner.py  flask_api.py  launch_mac_linux.sh  local_requests_patch.py  railway.toml  requirements.txt  streamlit_app.py  test_local_forecast.py
agents/: cost_agent.py  executive_agent.py  forecast_agent.py  risk_agent.py  staffing_agent.py
backend/: forecast_engine.py
docs/: autonomous_supervisor_trace.md  current_agentic_flow.md
fulfilltwin_ai/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  railway.toml  requirements.txt  run_api.py  start.sh  streamlit_app.py
fulfilltwin_ai/fulfilltwin/: __init__.py  api_client.py  config.py  local_client.py  ui_helpers.py
fulfilltwin_ai/fulfilltwin/backend/: __init__.py  app.py
fulfilltwin_ai/fulfilltwin/backend/artifacts/: metrics.json
fulfilltwin_ai/fulfilltwin/backend/data/knowledge/: conveyor_recovery.md  dock_inventory.md  energy_operations.md  incident_command.md  workforce_playbook.md
fulfilltwin_ai/fulfilltwin/backend/services/: __init__.py  agents.py  council.py  expert_system.py  llm.py  memory.py  ml_engine.py  optimizer.py  rag.py
fulfilltwin_ai/fulfilltwin/backend/storage/: memory.json
fulfilltwin_ai/tests/: test_agents.py  test_api.py  test_models.py  test_rag.py
fulfilltwin_ai/ui_pages/: agent_council.py  control_tower.py  knowledge_center.py  model_ops.py  scenario_lab.py
graph/: autonomous_supervisor.py  (+3 more)
(+78 files in other folders)
