[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fulfilltwin-ai"
version = "0.1.0"
description = "Human-Robot Workforce Digital Twin and Incident Commander"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.1,<4",
    "flask-cors>=5,<7",
    "gunicorn>=23,<24",
    "streamlit>=1.45,<2",
    "pandas>=2.2,<3",
    "numpy>=2.0,<3",
    "scikit-learn>=1.6,<2",
    "xgboost>=3.0,<4",
    "joblib>=1.4,<2",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "groq>=0.31,<1",
    "google-genai>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fulfilltwin*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
